[gd_scene load_steps=6 format=3 uid="uid://s1hie80ofivg"]

[ext_resource type="Script" path="res://CreatureParts/CellParts/Generic/outernail.gd" id="1_f02gb"]
[ext_resource type="Script" path="res://Combat Scene/scripts/melee weapon scripts/meleeconnectsignals.gd" id="1_ixrd4"]
[ext_resource type="Script" path="res://Combat Scene/scripts/Generic Scripts/CreatureMeleeScript.gd" id="2_13kds"]
[ext_resource type="PackedScene" uid="uid://c0jtvr5xh7ec0" path="res://Combat Scene/assets/cell parts/generalplayer/outernail.glb" id="3_j0uma"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lfcn5"]
margin = 0.05
radius = 0.19
height = 0.47

[node name="outernail" type="Node3D" node_paths=PackedStringArray("melee_damage_component")]
script = ExtResource("1_f02gb")
melee_damage_component = NodePath("outernailhitbox/Components/MeleeDamageComponent")
outernail_damage_mult = 1.0

[node name="outernailhitbox" type="Area3D" parent="." node_paths=PackedStringArray("MeleeDamageComponent")]
collision_layer = 256
collision_mask = 65
script = ExtResource("1_ixrd4")
MeleeDamageComponent = NodePath("Components/MeleeDamageComponent")

[node name="outernailhitbox" type="CollisionShape3D" parent="outernailhitbox" groups=["Hitbox"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_lfcn5")

[node name="Components" type="Node" parent="outernailhitbox"]

[node name="MeleeDamageComponent" type="Node" parent="outernailhitbox/Components"]
script = ExtResource("2_13kds")

[node name="outernail" parent="." instance=ExtResource("3_j0uma")]

[connection signal="body_shape_entered" from="outernailhitbox" to="outernailhitbox" method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="outernailhitbox" to="outernailhitbox" method="_on_body_shape_exited"]
